fix: fix z-index of slider button

--- a/source/sass/blocks/photos.scss
+++ b/source/sass/blocks/photos.scss
@@ -39,7 +39,7 @@
   width: 50px;
   background: url("../img/svg/slider-arrow.svg") center no-repeat;
   cursor: pointer;
-  z-index: 100;
+  z-index: 50;
 
   &--next {
     left: 103.6%;
